tests/fixtures/invalid/none_div_none.py
# Cannot divide None and None
x: float = None / None
